css/style.css
/* main */

@font-face {
  font-weight: 400;
  font-family: "Roboto";
  font-style: normal;

  src: local("Roboto"), local("Roboto-Regular"),
  url("../font/roboto.woff2") format("woff2");
}

@font-face {
  font-weight: 500;
  font-family: "Roboto";
  font-style: normal;

  src: local("Roboto Medium"), local("Roboto-Medium"),
  url("../font/robotomedium.woff2") format("woff2");
}

@font-face {
  font-weight: 700;
  font-family: "Roboto";
  font-style: normal;

  src: local("Roboto Bold"), local("Roboto-Bold"),
  url("../font/robotobold.woff2") format("woff2");
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html,
body {
  box-sizing: border-box;
  margin: 0;

  font-size: 16px;
  line-height: 22px;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  color: #ffffff;
}


.visually-hidden:not(:focus):not(:active),
input[type="radio"].visually-hidden,
input[type="checkbox"].visually-hidden {
  position: absolute;

  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;

  white-space: nowrap;

  border: 0;

  clip: rect(0, 0, 0, 0);
  clip-path: inset(50%);
}

.container {
  position: relative;

  display: block;
  width: 1146px;
  margin: 0 auto;
}

.background {
  min-width: 1200px;

  background-color: #849d8f;
  background-image: linear-gradient( #9cb0a5, #849d8f 700px );
  background-repeat: no-repeat;
  /* background-position: center -164px; */
}

.background ul {
  padding: 0;

  list-style: none;
}

.background a {
  color: inherit;
  text-decoration: none;
}

/* interaction */

.btn {
  display: inline-block;
  padding: 9px 25px 11px;

  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  font-family: inherit;
  color: #ffffff;
  text-decoration: none;

  background-image: linear-gradient(#f26843, #e74b36);
  border: none;
  border-radius: 20px;
  outline: none;
  box-shadow: 0 1px 2px #ac1000;
  cursor: pointer;
}

.btn:hover,
.btn:focus {
  background-image: linear-gradient(#f58669, #ec6f5e);
  box-shadow: 0 2px 2px #ac1000;
}

.btn:active {
  color: #fceeec;

  background-image: linear-gradient(#d74632, #e1613e);
  box-shadow: inset 0 2px 2px #942718;
}

.form-field {
  position: relative;

  height: 44px;
  margin: 0 0 20px 0;
}

.field {
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  min-height: 24px;
  padding: 10px 14px;

  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  font-family: inherit;
  color: #323232;

  background-color: rgb(255, 255, 255);
  border: none;
  border-radius: 5px;
  outline: none;
  box-shadow: inset 0 0 0 1px rgb(211, 211, 210);
}

.field:hover {
  box-shadow: inset 0 0 0 2px #999999;
}

.field:focus {
  box-shadow: inset 0 0 0 2px #5b9ddf;
}

.field + label {
  position: absolute;
  top: 11px;
  left: 14px;

  color: #999999;

  pointer-events: none;
}

.field:focus + label {
  color: #5b9ddf;
}

.field:focus + label,
.field:required:valid + label {
  top: -14px;

  font-size: 11px;
  line-height: 11px;
}

/* header */

.header-nav {
  display: flex;
  width: 100%;
}

.logo {
  margin-top: 9px;
}

.menu-nav {
  display: flex;
  flex-wrap: wrap;
  max-width: 650px;
  margin: 23px auto 0 9px;

  font-weight: 700;
  line-height: 18px;
}

.menu-nav a:hover,
.menu-nav a:focus {
  color: #323232;

  outline: none;
}

.menu-item {
  position: relative;

  align-self: flex-start;
}

.menu-item a {
  text-decoration: none;
}

.menu-item > a {
  display: inline-block;
  margin: 6px 14px 0;
  padding-bottom: 3px;

  line-height: 18px;

  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

.menu-item:hover > a,
.menu-item > a:focus,
.menu-item > a:active,
.menu-item-current > a,
.menu-item:target > a {
  margin: 0;
  padding: 6px 14px 11px;

  color: #323232;

  background-color: #f7f6f3;
  border: none;
  border-radius: 24px;
}

.menu-item > a:active,
.menu-item:target > a {
  background-color: #ededed;
  box-shadow: inset 0 2px 1px 0 #696969;
}

.menu-item-current > a,
.menu-item-current > a:hover {
  color: #ffffff;

  background-color: #d07058;
}

.menu-item > a:hover::after {
  content: "";
  position: absolute;
  bottom: -5px;
  left: 0;

  width: 100%;
  height: 5px;
}

.sub-menu {
  position: absolute;
  top: -100000px;
  left: -6px;
  z-index: 100;

  overflow: hidden;

  white-space: nowrap;

  background-color: #f7f6f3;
  border-radius: 5px;
  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
}

.menu-item:hover .sub-menu,
.sub-menu.js-drop-down {
  top: 37px;
}

.menu-item:target .sub-menu {
  top: 60px;
}

.sub-menu__item a {
  display: block;
  padding: 9px 20px 7px;

  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  color: #323232;
}

.sub-menu__item:last-child a {
  padding: 8px 21px 12px;
}

.sub-menu__item a:hover {
  background-color: #fbded7;
}

.sub-menu__item a:focus,
.sub-menu__item a:active {
  background-color: #f6b5a5;
}

.sub-menu__item--current a,
.sub-menu__item--current a:hover {
  color: #ffffff;

  background-color: #d07058;
}

.sub-menu__item--bold a {
  position: relative;

  padding: 11px 21px 12px;

  font-weight: 700;
}

.sub-menu__item--bold a::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 6px;

  width: calc(100% - 12px);
  height: 1px;

  background-color: rgba(53, 53, 53, 0.2);
}

.user-nav {
  display: flex;
  margin: 0;
}

.user-nav li {
  position: relative;

  align-self: flex-start;
  margin: 23px 0 0 10px;
  padding: 0;
}

.user-nav li:target {
  top: -23px;

  padding-top: 23px;
}

.popup-form {
  position: absolute;
  top: 37px;
  right: 0;

  display: none;

  background-color: rgb(248, 247, 244);
  border-radius: 6px;
  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);

  pointer-events: auto;
}

.popup-form::before {
  content: "";
  position: absolute;
  top: -5px;
  left: 0;

  width: 100%;
  height: 5px;
}
/* ... */

